BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/CRM_Memo__c.object-meta.xml
<CustomObject>
    <label>Memo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Titolo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>