BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine Popup di Cassa</label>
    <type>Date</type>
</CustomField>