BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/Autore__c.field-meta.xml
<CustomField>
    <fullName>Autore__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autore</label>
    <type>Text</type>
</CustomField>