BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NoteTest</relationshipName>
    <type>Lookup</type>
</CustomField>