BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_CreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>CRM_CreatedByMe__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creato da me</label>
    <type>Checkbox</type>
</CustomField>