BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_Data_di_Creazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_di_Creazione__c</fullName>
    <formula>IF(ISNULL(CRM_FineValidita__c),CRM_FineValidita__c,DATEVALUE(CreatedDate) )</formula>
    <label>Data di Creazione</label>
    <type>Date</type>
</CustomField>