BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_DataCH_PDF__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataCH_PDF__c</fullName>
    <formula>CRM_FineValidita__c</formula>
    <label>Data CH PDF</label>
    <type>Date</type>
</CustomField>