BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_Filiale__c.field-meta.xml
<CustomField>
    <fullName>CRM_Filiale__c</fullName>
    <formula>Cliente__r.CRM_FilialeToDisplay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>