BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_FineValidita__c.field-meta.xml
<CustomField>
    <fullName>CRM_FineValidita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine validità</label>
    <type>Date</type>
</CustomField>