BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_IdCEDPadreAutore__c.field-meta.xml
<CustomField>
    <fullName>CRM_IdCEDPadreAutore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdCED Padre Autore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>