BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_MacroModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>CRM_MacroModelloDiServizio__c</fullName>
    <formula>TEXT(Cliente__r.ModelloDiServizio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macro-modello di servizio</label>
    <type>Text</type>
</CustomField>