BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_Note__c.field-meta.xml
<CustomField>
    <fullName>CRM_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>