BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_PopupCassa__c.field-meta.xml
<CustomField>
    <fullName>CRM_PopupCassa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popup di Cassa</label>
    <type>Checkbox</type>
</CustomField>