BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_Referente__c.field-meta.xml
<CustomField>
    <fullName>CRM_Referente__c</fullName>
    <formula>Cliente__r.PTF_Portafoglio__r.CRM_ReferentePortafoglio__r.FirstName + &quot; &quot; + Cliente__r.PTF_Portafoglio__r.CRM_ReferentePortafoglio__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente</label>
    <type>Text</type>
</CustomField>