BPER/DEVF/force-app/main/default/objects/CRM_Memo__c/fields/CRM_Titolo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Titolo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Titolo memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>